<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/dialogTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/delete_photo"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/contentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitleText"
            android:text="@string/want_to_delete_photo"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesButton"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/noButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentText"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/yes"
            android:textColor="@color/blue"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/blue"
            app:cornerRadius="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noButton"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentText"
            android:layout_marginBottom="20dp"
            android:text="@string/no"
            android:backgroundTint="@color/blue">
        </com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
