<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/bottomSheetTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_photos"
            android:textAllCaps="true"
            android:textSize="22sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/galleryLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/bottomSheetTitleText"
            app:layout_constraintStart_toStartOf="@+id/bottomSheetTitleText">

            <ImageView
                android:id="@+id/galleryImg"
                android:layout_width="35dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/image_icon">
            </ImageView>

            <TextView
                android:id="@+id/galleryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/galleryImg"
                app:layout_constraintTop_toTopOf="@+id/galleryImg"
                app:layout_constraintBottom_toBottomOf="@+id/galleryImg"
                android:text="@string/upload_from_gallery"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/galleryArrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="@+id/galleryImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/galleryImg"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/arrow_forward_icon">
            </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/galleryView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/galleryLay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/gray"
            android:layout_marginTop="10dp">
        </View>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cameraLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/galleryView"
            app:layout_constraintStart_toStartOf="@+id/bottomSheetTitleText">


            <ImageView
                android:id="@+id/cameraImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/camera_icon">
            </ImageView>

            <TextView
                android:id="@+id/cameraText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/cameraImg"
                app:layout_constraintTop_toTopOf="@+id/cameraImg"
                app:layout_constraintBottom_toBottomOf="@+id/cameraImg"
                android:text="@string/take_photo"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/cameraArrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="@+id/cameraImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/cameraImg"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/arrow_forward_icon">
            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/cameraLay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/gray"
            android:layout_marginTop="10dp">
        </View>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/whatsappLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cameraView"
            app:layout_constraintStart_toStartOf="@+id/bottomSheetTitleText">


            <ImageView
                android:id="@+id/whatsappImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/whatsapp_img">
            </ImageView>

            <TextView
                android:id="@+id/whatsappText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/whatsappImg"
                app:layout_constraintTop_toTopOf="@+id/whatsappImg"
                android:text="@string/whatsapp_your_photo"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/whatsappMobileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/whatsappText"
                app:layout_constraintStart_toStartOf="@+id/whatsappText"
                app:layout_constraintBottom_toBottomOf="@+id/whatsappImg"
                android:text="+91 9×××××××××"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/whatsappArrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="@+id/whatsappText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/whatsappMobileText"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/arrow_forward_icon">
            </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>